force-app/main/default/objects/Quotes__c/Quotes__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>