force-app/main/default/objects/Quotes__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>