force-app/main/default/objects/Quotes__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.City__c</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>