force-app/main/default/objects/Quotes__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Country__c</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>