force-app/main/default/objects/Quotes__c/fields/BillingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>BillingStateProvince__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.State__c</formula>
    <label>Billing State/Province</label>
    <type>Text</type>
</CustomField>