force-app/main/default/objects/Quotes__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Street__c</formula>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>