force-app/main/default/objects/Quotes__c/fields/BillingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingZipPostalCode__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Pincode__c</formula>
    <label>Billing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>