force-app/main/default/objects/Quotes__c/fields/BillToName__c.field-meta.xml
<CustomField>
    <fullName>BillToName__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>