force-app/main/default/objects/Quotes__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <formula>IF( OR( BillingStateProvince__c == &apos;Telangana&apos;, BillingStateProvince__c == &apos;telangana&apos;, BillingStateProvince__c == &apos;TELANGANA&apos;), 0.09, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>