force-app/main/default/objects/Quotes__c/fields/Commissioning_Charges__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Charges__c</fullName>
    <defaultValue>7500</defaultValue>
    <label>Commissioning Charges For Each Machine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>