force-app/main/default/objects/Quotes__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <formula>Opportunity_Name__r.Competitors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitors</label>
    <type>Text</type>
</CustomField>