force-app/main/default/objects/Quotes__c/fields/Contact_Name2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name2__c</fullName>
    <formula>Opportunity_Name__r.Last_Name__c &amp; &quot; &quot; &amp;  Opportunity_Name__r.First_Name__c</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>