force-app/main/default/objects/Quotes__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>&quot;4 to 6 weeks.&quot;</defaultValue>
    <label>Delivery</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>