force-app/main/default/objects/Quotes__c/fields/FINAL_SUB_COST__c.field-meta.xml
<CustomField>
    <fullName>FINAL_SUB_COST__c</fullName>
    <label>FINAL SUB COST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>