force-app/main/default/objects/Quotes__c/fields/FinalFF__c.field-meta.xml
<CustomField>
    <fullName>FinalFF__c</fullName>
    <label>Final Sub Cost</label>
    <summarizedField>Quote_Line_Item__c.FinalF__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quotes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>