force-app/main/default/objects/Quotes__c/fields/Find_Quote__c.field-meta.xml
<CustomField>
    <fullName>Find_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Find Quote</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>Quotation</relationshipLabel>
    <relationshipName>Quotation</relationshipName>
    <type>Lookup</type>
</CustomField>