force-app/main/default/objects/Quotes__c/fields/Forwarding__c.field-meta.xml
<CustomField>
    <fullName>Forwarding__c</fullName>
    <defaultValue>&quot;Included.&quot;</defaultValue>
    <label>Forwarding</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>