force-app/main/default/objects/Quotes__c/fields/Forwarding_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Charges_Amount__c</fullName>
    <formula>QuotedQQ__c *  Forwarding_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forwarding Charges Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>