force-app/main/default/objects/Quotes__c/fields/ForwardingCharge__c.field-meta.xml
<CustomField>
    <fullName>ForwardingCharge__c</fullName>
    <label>Forwarding Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>