force-app/main/default/objects/Quotes__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <defaultValue>&quot;To pay basis.&quot;</defaultValue>
    <label>Freight</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>