force-app/main/default/objects/Quotes__c/fields/Grand_TotalF_c__c.field-meta.xml
<CustomField>
    <fullName>Grand_TotalF_c__c</fullName>
    <formula>Total_CostF_c__c  +  Transit_Insurance_ChargesF_c__c  + GST_AmountF_c__c + SGST_Amount_Final__c +  SGST_Amount_Final__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total(Final Price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>