force-app/main/default/objects/Quotes__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <formula>Total_Cost__c   *  VALUE( TEXT( GST__c ) )  / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>