force-app/main/default/objects/Quotes__c/fields/GST_AmountF_c__c.field-meta.xml
<CustomField>
    <fullName>GST_AmountF_c__c</fullName>
    <formula>Total_CostF_c__c  *  VALUE(text( IGST__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount(Final price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>