force-app/main/default/objects/Quotes__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.GSTIN__c</formula>
    <label>GSTIN</label>
    <type>Text</type>
</CustomField>