force-app/main/default/objects/Quotes__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <formula>IF(OR( BillingStateProvince__c== &apos;Telangana&apos;, BillingStateProvince__c== &apos;telangana&apos;, BillingStateProvince__c== &apos;TELANGANA&apos;),0,0.18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>