force-app/main/default/objects/Quotes__c/fields/LastVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>LastVersionNumber__c</fullName>
    <label>LastVersionNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>