force-app/main/default/objects/Quotes__c/fields/Lost_to_which_competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_which_competitor__c</fullName>
    <formula>Opportunity_Name__r.Lost_to_which_competitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost to which competitor</label>
    <type>Text</type>
</CustomField>