force-app/main/default/objects/Quotes__c/fields/Machine_Required__c.field-meta.xml
<CustomField>
    <fullName>Machine_Required__c</fullName>
    <label>Machine Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>