force-app/main/default/objects/Quotes__c/fields/Mandal__c.field-meta.xml
<CustomField>
    <fullName>Mandal__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Mandal__c</formula>
    <label>Mandal</label>
    <type>Text</type>
</CustomField>