force-app/main/default/objects/Quotes__c/fields/Model_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Model_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Model Quotation</label>
    <type>Checkbox</type>
</CustomField>