force-app/main/default/objects/Quotes__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;For all the bought out items like electrical, electronic and etc. warranty, which Parent companies offer, the same will be forwarded to the customers.&quot;</defaultValue>
    <label>Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>