force-app/main/default/objects/Quotes__c/fields/Packing_Charges__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges__c</fullName>
    <label>Packing Charges (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>