force-app/main/default/objects/Quotes__c/fields/Packing_Charges_AmountF_c__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges_AmountF_c__c</fullName>
    <formula>FinalFF__c *  Packing_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing Charges Amount (for Final price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>