force-app/main/default/objects/Quotes__c/fields/PackingCharge__c.field-meta.xml
<CustomField>
    <fullName>PackingCharge__c</fullName>
    <label>Packing Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>