force-app/main/default/objects/Quotes__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>&quot;30% as advance along with your purchase Order and balance 70% against proforma invoice prior to dispatch. (All the payments should be drawn in favour of RICETECH Machinery India Pvt.Ltd. Payable at Hyderabad.)&quot;</defaultValue>
    <label>Payment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>