force-app/main/default/objects/Quotes__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Mobile__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>