force-app/main/default/objects/Quotes__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>&quot;Ex-our works, at Hyderabad.&quot;</defaultValue>
    <label>Price</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>