force-app/main/default/objects/Quotes__c/fields/Product_Nam__c.field-meta.xml
<CustomField>
    <fullName>Product_Nam__c</fullName>
    <formula>Product__r.Products__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>