force-app/main/default/objects/Quotes__c/fields/QUOTED_SUB_COST__c.field-meta.xml
<CustomField>
    <fullName>QUOTED_SUB_COST__c</fullName>
    <label>QUOTED SUB COST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>