force-app/main/default/objects/Quotes__c/fields/QuotedQQ__c.field-meta.xml
<CustomField>
    <fullName>QuotedQQ__c</fullName>
    <label>Quoted Sub Cost</label>
    <summarizedField>Quote_Line_Item__c.QuotedQ__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quotes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>