force-app/main/default/objects/Quotes__c/fields/Reason_For_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Loss__c</fullName>
    <formula>Opportunity_Name__r.Reason_For_Loss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason For Loss</label>
    <type>Text</type>
</CustomField>