force-app/main/default/objects/Quotes__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>&quot;Included.&quot;</defaultValue>
    <label>Sales Tax</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>