force-app/main/default/objects/Quotes__c/fields/SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount__c</fullName>
    <formula>Total_Cost__c * VALUE( TEXT( SGST__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>