force-app/main/default/objects/Quotes__c/fields/SGST_Amount_Final__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount_Final__c</fullName>
    <formula>Total_CostF_c__c * VALUE(text( SGST__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Amount Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>