force-app/main/default/objects/Quotes__c/fields/Sub_Cost_FinalF__c.field-meta.xml
<CustomField>
    <fullName>Sub_Cost_FinalF__c</fullName>
    <formula>Opportunity_Name__r.Sub_Cost_for_Final_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Cost(Final)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>