force-app/main/default/objects/Quotes__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Area__r.Name</formula>
    <label>Territory</label>
    <type>Text</type>
</CustomField>