force-app/main/default/objects/Quotes__c/fields/Total_Commissioning_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissioning_Charges__c</fullName>
    <formula>Commissioning_Charges__c  *  Machine_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissioning Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>