force-app/main/default/objects/Quotes__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>QuotedQQ__c + PackingCharge__c +  Packing_Charges_Amount__c + ForwardingCharge__c +  Forwarding_Charges_Amount__c +  Total_Commissioning_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>