force-app/main/default/objects/Quotes__c/fields/Total_CostF_c__c.field-meta.xml
<CustomField>
    <fullName>Total_CostF_c__c</fullName>
    <formula>FinalFF__c + PackingCharge__c +  Packing_Charges_AmountF_c__c + ForwardingCharge__c +   Forwarding_Charges_AmountF_c__c + Total_Commissioning_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost(Final Price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>