force-app/main/default/objects/Quotes__c/fields/Total_Power_Required__c.field-meta.xml
<CustomField>
    <fullName>Total_Power_Required__c</fullName>
    <label>Total Power Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>