force-app/main/default/objects/Quotes__c/fields/Total_PowerPP__c.field-meta.xml
<CustomField>
    <fullName>Total_PowerPP__c</fullName>
    <label>Total Power Required</label>
    <summarizedField>Quote_Line_Item__c.PowerHP__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quotes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>