force-app/main/default/objects/Quotes__c/fields/Transit_Insurance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transit_Insurance_Charges__c</fullName>
    <formula>Total_Cost__c * Transit_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Insurance Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>