force-app/main/default/objects/Quotes__c/fields/Transit_Insurance_ChargesF_c__c.field-meta.xml
<CustomField>
    <fullName>Transit_Insurance_ChargesF_c__c</fullName>
    <formula>Total_CostF_c__c *  Transit_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Insurance Charges(Final Price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>