force-app/main/default/objects/Quotes__c/fields/Type_of_Commodity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Commodity__c</fullName>
    <formula>Opportunity_Name__r.Type_of_Commodity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Commodity</label>
    <type>Text</type>
</CustomField>