force-app/main/default/objects/Quotes__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <defaultValue>&quot;This quotation is valid for 30 days, unless extended.&quot;</defaultValue>
    <label>Validity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>