force-app/main/default/objects/Quotes__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <formula>Opportunity_Name__r.AccountID__r.Village__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>