force-app/main/default/objects/Quotes__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <defaultValue>&quot;We accept responsibilities of manufacturing defects only for a period of One year from the date of delivery.&quot;</defaultValue>
    <label>Warranty</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>