force-app/main/default/objects/Quotes__c/listViews/My_Model_Quotations.listView-meta.xml
<ListView>
    <fullName>My_Model_Quotations</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>AccountId__c</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Model_Quotation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Model Quotations</label>
</ListView>